src/objects/AttributionRule__c.object
<CustomObject>
    <fields>
        <fullName>AttributeTo__c</fullName>
        <label>Attribute To</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ShipTo</fullName>
                    <label>Ship To</label>
                </value>
                <value>
                    <fullName>OrderedBy</fullName>
                    <label>Ordered By</label>
                </value>
                <value>
                    <fullName>ShipToExceptLabs</fullName>
                    <label>Ship To excluding Labs, otherwise Ordered By</label>
                </value>
                <value>
                    <fullName>OrderedByExceptBanks</fullName>
                    <label>Ordered By excluding Banks, otherwise Ship To Primary Address</label>
                </value>
                <value>
                    <fullName>ShipToIfCustomer</fullName>
                    <label>Ship To only if Customer, otherwise Ordered By</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttributionTarget__c</fullName>
        <inlineHelpText>Original Value = Use the Customer BK value for attribution
Primary Address = Use the Primary Address associated to the Customer BK for attribution
Customer Master = Use the Customer Master associated to the Customer BK for attribution</inlineHelpText>
        <label>Attribution Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OriginalValue</fullName>
                    <default>true</default>
                    <label>Original Value</label>
                </value>
                <value>
                    <fullName>PrimaryAddress</fullName>
                    <label>Primary Address</label>
                </value>
                <value>
                    <fullName>CustomerMaster</fullName>
                    <label>Customer Master</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FallbackStrategy__c</fullName>
        <label>If CIM ID is missing:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                    <default>true</default>
                    <label>Fallback to Customer Master, then Primary Address</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <label>Do nothing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precedence__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If more than one rule matches a record, the rule with the highest precedence will be used. If multiple rules match and also share the same precedence then the rule&apos;s ID will be used as a tie-breaker.</inlineHelpText>
        <label>Precedence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Attribution Rule</label>
    <nameField>
        <label>Attribution Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribution Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>